1-httpbinHttpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
 name: httpbin-route-cicd
 namespace: client2
 annotations:
   konghq.com/strip-path: 'true'
   konghq.com/plugins: client2-cicd-rate-limit, client2-cicd-oidc-ory, client2-cicd-cors
spec:
 parentRefs:
 - name: kong
   namespace: kong
 rules:
 - matches:
   - path:
       type: PathPrefix
       value: /client2/CICDIngresshttpbin
   backendRefs:
   - name: httpbin
     kind: Service
     port: 8080
